--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
         feverGauge: 0,
         isFever: false,
         feverTimeoutId: null,
+        totalEarned: 0,
         lastMoneyForDps: 0,
         currentDps: 0,
       };
@@ -709,6 +710,7 @@
         if (gain <= 0) return 0;
 
         state.money += gain;
+        state.totalEarned += gain;
         moneyEl.textContent = formatBigNumber(state.money);
 
         let mainText = `${gemName} をタップ！ +${formatBigNumber(gain)}G`;
@@ -764,7 +766,7 @@
       function updateStats() {
         tapCountEl.textContent = state.totalTapCount;
         const baseAuto = state.autoMinerLevel * 5;
-        const displayAuto = Math.floor(baseAuto * levelValueMultiplier());
+        const displayAuto = Math.floor(baseAuto * totalValueMultiplier());
         autoIncomeEl.textContent = formatBigNumber(displayAuto);
         dpsEl.textContent = formatBigNumber(state.currentDps);
       }
@@ -1003,6 +1005,7 @@
         gain = Math.floor(gain * totalValueMultiplier());
         if (gain <= 0) return;
         state.money += gain;
+        state.totalEarned += gain;
         moneyEl.textContent = formatBigNumber(state.money);
         updateUnlockStatusText();
         updateShopButtons();
@@ -1010,9 +1013,9 @@
 
       // ========= DPS計測 =========
       function dpsTick() {
-        const diff = state.money - state.lastMoneyForDps;
+        const diff = state.totalEarned - state.lastMoneyForDps;
         state.currentDps = diff;
-        state.lastMoneyForDps = state.money;
+        state.lastMoneyForDps = state.totalEarned;
         updateStats();
       }
 
