--- a/index.html
+++ b/index.html
@@ -97,7 +97,22 @@
                 <span class="shop-quick-cost">必要: <span id="auto-cost">300</span>G</span>
               </div>
             </div>
+            <div class="shop-quick">
+              <div class="shop-quick-label">宝石価値投資</div>
+              <div class="shop-quick-body">
+                <span class="shop-quick-level">Lv.<span id="value-level">0</span></span>
+                <span class="shop-quick-cost">必要: <span id="value-cost">500</span>G</span>
+              </div>
+            </div>
           </div>
+        </section>
+
+        <section id="auto-log">
+          <div class="section-header">
+            <div class="section-title">オート採掘ログ</div>
+            <div id="auto-log-rate" class="log-rate">0 G/秒</div>
+          </div>
+          <ul id="auto-log-list" class="log-list" aria-live="polite"></ul>
         </section>
       </div>
     </div>
@@ -151,6 +166,18 @@
                   <span>必要: <span id="auto-cost-modal">300</span>G</span>
                 </div>
                 <button id="auto-btn">購入</button>
+              </div>
+
+              <div class="shop-item">
+                <div class="shop-item-title">宝石価値投資</div>
+                <div class="shop-item-desc">
+                  全ての宝石の基礎価値を恒久的に底上げし、タップも放置も大幅インフレ。
+                </div>
+                <div class="shop-item-info">
+                  <span>Lv.<span id="value-level-modal">0</span></span>
+                  <span>必要: <span id="value-cost-modal">500</span>G</span>
+                </div>
+                <button id="value-btn">投資する</button>
               </div>
             </div>
           </div>
